12/16/11 #3170, add event for attempt to interact with concentration graph
12/15/11 #3170, send event when the user is comparing the pH paper to the pH color key
12/15/11 #3170, when user tries to interact with the magnifying glass, identify which part they clicked on (handle, lens, molecule)
12/15/11 #3170, add event for attempt to interact with battery or light bulb
12/15/11 #3170, add event for attempt to interact with reaction equation
12/13/11 #3170, add events for when the conductivity probes transition between in/out of solution
12/13/11 #3170, add events for when the pH meter and pH paper transition between in/out of solution
12/13/11 #3175, overhaul sim-sharing drag handlers to support optional functions for start/end/drag
12/6/11 #3170, add sim-sharing event for when user tries to drag pH color key, which is not interactive
# 1.02.01 (59097) Dec 6, 2011
12/6/11 first dev version with sim-sharing features
12/6/11 #3170, add sims-sharing params to indicate whether conductivity probes are are in solution, and whether circuit is completed
12/6/11 #3170, add methods for determining whether conductivity probes are in solution
12/6/11 #3170, add sim-sharing param to indicate whether pH paper has been dipped
12/6/11 #3170, add sim-sharing event for when user tries to drag magnifying glass, which is not interactive
12/6/11 #3170, added sim-sharing "study" flavor to build.properties file
12/6/11 #3170, added sim-sharing parameter indicating whether pH meter is in solution
12/6/11 #3170, added sim-sharing for sliders related to custom solution
12/5/11 #3170, added sim-sharing for pH Meter and pH Paper
12/5/11 #3170, added sim-sharing to all radio buttons, check boxes, and icons
5/9/11 Moved ConductivityTester and related strings and images from acid-base-solutions to piccolo-phet, see #2864
# 1.02.00 (51717) May 9, 2011
5/9/11 > added new translation credits features
# 1.01.01 (51561) May 5, 2011